--- a/src/css/application.css
+++ b/src/css/application.css
@@ -119,7 +119,7 @@ body {
 
 .dashboard {
   background-color: #00ff85;
-  color: white;
+  color: black;
   height: 100vh;
 }
 
@@ -167,39 +167,35 @@ body {
   overflow: scroll;
 }
 
-.dashboard-menu--grid {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: flex-start;
-  align-content: flex-start;
-  justify-content: space-around;
-}
-
 .dashboard-menu-item {
   font-size: 0.8rem;
-  background-color: white;
-  color: black;
   cursor: pointer;
   box-sizing: border-box;
-  margin: 0.5rem 10%;
-  padding: 0.2rem 0.5rem;
+  padding: 0.5rem;
+  border-top: 1px solid black;
 }
 
-.dashboard-menu-item--grid {
-  flex: 0 0 40%;
-  white-space: nowrap;
-  margin: 0 0 0.5rem 0;
-  padding: 1rem 0.5rem;
-  text-align: center;
-}
-
-.dashboard-menu-item:hover, .dashboard-menu-item--active {
-  background-color: lightgray;
-  color: white;
+.dashboard-menu-item:hover {
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
 .dashboard-menu-item--active {
   font-weight: bold;
+}
+
+.dashboard-menu-itemContainer {
+  position: relative;
+}
+
+.dashboard-submenuContainer {
+  float: right;
+}
+
+.dashboard-submenu {
+  position: absolute;
+  top: 0;
+  background-color: lightgray;
+  z-index: 1;
 }
 
 .dashboard-popContainer {
