reorder projects and add sticky button

--- a/src/css/application.css
+++ b/src/css/application.css
@@ -295,6 +295,13 @@ body {
   cursor: default;
 }
 
+.top-bar__menu-item_sticky {
+  position: sticky;
+  bottom: 0px;
+  background-color: var(--color-low-contrast-gray);
+}
+
+
 .top-bar__drop-down-button {
   padding-left: 0.5em;
 }
@@ -427,9 +434,14 @@ body {
   white-space: normal;
 }
 
+.project-preview__label_archived {
+  font-style: italic;
+}
+
 .project-preview__archive {
   color: var(--color-light-gray);
   margin-right: 1em;
+  font-size: 1.5em;
 }
 
 .project-preview__archive:hover {
